Fix CI JDK resolution by switching setup-java to Temurin 26-ea (#8470)
* Initial plan

* feat: update all configs, workflows, and docs to use Java 26 with roadmap

Co-authored-by: pethers <1726836+pethers@users.noreply.github.com>

* fix: correct Java LTS cadence (29/33 not 27/31), pin action SHAs, fix profile docs

Co-authored-by: pethers <1726836+pethers@users.noreply.github.com>

* fix: use Java 26 EA in GitHub workflows

Co-authored-by: pethers <1726836+pethers@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: pethers <1726836+pethers@users.noreply.github.com>